--- a/android/build.gradle
+++ b/android/build.gradle
@@ -39,8 +39,8 @@ android {
     namespace "de.ffuf.in_app_update"
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 
     kotlinOptions {
